# AgentWrite

./: README.md  chapter_plan.json  final_story.md  graph.py  main.py  pyproject.toml  questions.txt  references.txt  story_characteristics.json  tools.py
LLMs/: llm.py
chains/: plan_chain.py  prompt_check_chain.py  story_characterizer_chain.py  write_chain.py
chains/prompts/: check_prompt.txt  plan.txt  story_category.txt  write.txt
nodes/: __init__.py  chapter_planner_node.py  prompt_check_node.py  saving_node.py  story_planner_node.py  writing_node.py
